--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - bash .travis/_install.sh
 
 script:
-  - bash .travis/_build.sh
+  - travis_wait 30 bash .travis/_build.sh
   - bash .travis/_deploy.sh
 
 branches:
