include the .travis save script

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
 script:
   - travis_wait 60 bash .travis/_build.sh
   - bash .travis/_deploy.sh
+  - bash .travis/_save.sh
 
 branches:
   only:
